added the login rest api classes and modularized api folder to rest api
